fixed BackArrow visibility and CloseButton not rotating issues

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -1890,6 +1890,7 @@ width: 70%;
 height: 20px;
 border: none;
 border-radius: 0;
+border: #444 solid 1px;
 }
 textarea {
 background: #ccc;
@@ -1900,6 +1901,7 @@ box-shadow: inset 0 0 3px rgba(35,31,32,.45);
 width: 70%;	
 border: none;
 border-radius: 0;
+border: #444 solid 1px;
 }
 
 .checkbox {
